Fix main navigation overflow in mobile

--- a/ui/root/main-navigation.sass
+++ b/ui/root/main-navigation.sass
@@ -3,7 +3,7 @@
 @use '/ui/styles/style' as *
 
 #logo
-  font: italic bolder 2.5em "Permanent Marker", sans-serif
+  font: italic bolder 3em "Permanent Marker", sans-serif
   text-decoration: none
   color: $white
   text-shadow: 2px 2px 0 color.scale($primary, $lightness: -50%)
